<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="6dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dip"
                    android:gravity="center_horizontal"
                    android:text="@string/help_title"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dip"
                    android:text="@string/function_title"
                    android:textColor="#0000FF"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dip"
                    android:text="@string/function"
                    android:textColor="#000000"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dip"
                    android:text="@string/means_title"
                    android:textColor="#0000FF"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dip"
                    android:text="@string/means"
                    android:textColor="#000000"
                    android:textSize="17sp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>