<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="Options">
        <menu>
            <item
                android:id="@+id/nav_reports"
                android:icon="@drawable/ic_menu_history"
                android:title="@string/nav_menu_reports" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/nav_menu_help" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/nav_menu_settings" />
        </menu>
    </item>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
